--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="gallery">
         <div class="one">
           <div class="line"></div>
-          <h2>mushroom one</h2>
+          <h2>Amanita muscaria</h2>
           <p>
             Amanita muscaria, commonly known as the fly agaric or fly amanita,
             is a basidiomycete of the genus Amanita. It is also a muscimol
@@ -85,7 +85,7 @@
         </div>
         <div class="four">
           <div class="line"></div>
-          <h2>mushroom two</h2>
+          <h2>Mycena galericulata</h2>
           <p>
             Mycena galericulata is a mushroom species commonly known as the
             common bonnet, the toque mycena, or the rosy-gill fairy helmet. The
@@ -102,7 +102,7 @@
         </div>
         <div class="five">
           <div class="line"></div>
-          <h2>mushroom three</h2>
+          <h2>Mycena epipterygia</h2>
           <p>
             Mycena epipterygia is a common species in Western Europe (amongst
             others Netherlands and Belgium). It grows in diverse habitats: in
@@ -121,7 +121,7 @@
         </div>
         <div class="eight">
           <div class="line"></div>
-          <h2>mushroom four</h2>
+          <h2>Strobilurus tenacellus</h2>
           <p>
             Strobilurus tenacellus, commonly known as the pinecone cap, is a
             species of agaric fungus in the family Physalacriaceae. It is found
@@ -137,7 +137,7 @@
         </div>
         <div class="nine">
           <div class="line"></div>
-          <h2>mushroom five</h2>
+          <h2>Xeromphalina campanella</h2>
           <p>
             Xeromphalina campanella is a species of mushroom. The common names
             of the species include the golden trumpet and the bell Omphalina.
@@ -154,7 +154,7 @@
         </div>
         <div class="twelve">
           <div class="line"></div>
-          <h2>mushroom six</h2>
+          <h2>Mycena galopus</h2>
           <p>
             Mycena galopus is found in North America and Europe. The saprobic
             fungus is an important leaf litter decomposer, and able to utilize
